tests/golden/type_errors/generic_enum_constructor_mismatch.cd
enum Box<T> { Value(T), Empty }
let value: Box<number> = Box.Value("text");
