tests/golden/type_errors/generic_enum_constructor_mismatch.err
Type error at 2:42: variant argument 1 expects number, got string
  let value: Box<number> = Box.Value("text");
                                           ^
